# sgit

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/sgit/: Cargo.toml  build.rs  glibc_shim.c
crates/sgit-core/: Cargo.toml
crates/sgit-core/src/: config.rs  error.rs  lib.rs
crates/sgit-core/src/db/: mod.rs
crates/sgit-core/src/indexer/: embed.rs  git.rs  mod.rs
crates/sgit-core/src/search/: mod.rs  query.rs
crates/sgit/src/: cli.rs  main.rs
crates/sgit/src/commands/: index.rs  log.rs  mod.rs  uninstall.rs
