[package]
name        = "sgit-core"
description = "Core library for sgit — semantic git history search"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
repository.workspace = true

[dependencies]
# All versions come from the workspace — no duplication
tokio.workspace       = true
async-trait.workspace = true
futures.workspace     = true
thiserror.workspace   = true   # typed errors for library callers
tracing.workspace     = true   # structured logging
serde.workspace       = true
serde_json.workspace  = true
chrono.workspace      = true
parking_lot.workspace = true
rayon.workspace       = true
rusqlite.workspace    = true
lru.workspace         = true
directories.workspace = true
git2.workspace        = true
fastembed.workspace   = true
indicatif.workspace   = true