[package]
name        = "sgit"
description = "Semantic git history search — find commits with natural language"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "sgit"
path = "src/main.rs"

[dependencies]
sgit-core.workspace    = true
tokio.workspace        = true
anyhow.workspace       = true
tracing.workspace      = true
tracing-subscriber.workspace = true
clap.workspace         = true
colored.workspace      = true
indicatif.workspace    = true
reqwest.workspace      = true
self_update.workspace  = true
serde.workspace        = true
serde_json.workspace   = true
directories.workspace  = true